configs/clusters-ng/production/03-stage/nginx-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: '*.local.d20.fan'
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: d20-fan-tls
        namespace: cert-manager
    allowedRoutes:
      namespaces:
        from: All
